--- a/app/src/main/res/layout/forumlayout.xml
+++ b/app/src/main/res/layout/forumlayout.xml
@@ -12,20 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#456356">
+        android:background="#fff">
         <TextView
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-            android:textColor="#fff"
             android:textStyle="bold"></TextView>
 
         <TextView
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
             android:textSize="25dp"></TextView>
     </LinearLayout>
 </LinearLayout>
