--- a/app/src/main/res/layout/activity_inner_forum.xml
+++ b/app/src/main/res/layout/activity_inner_forum.xml
@@ -25,13 +25,6 @@
         android:layout_below="@id/caption"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/forumImage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/ic_launcher_background"></ImageView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,6 +46,14 @@
                 android:layout_height="wrap_content"
                 android:hint="Dislike"></Button>
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/forumImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1">
+        </ImageView>
 
     </LinearLayout>
 
