login,sign,profile android tests and unit tests added
login,sign,profile android tests and unit tests added

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:id="@+id/resetScreen"
     android:orientation="vertical"
     android:background="#ffcccc"
     tools:context=".ResetPassword">
