--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="#ffcccc"
+    android:id="@+id/loginScreen"
     tools:context=".LoginScreen">
 
     <ImageView
@@ -13,6 +14,7 @@
         android:layout_gravity="center"
         android:background="@drawable/recipe"
         android:layout_marginTop="20dp"
+        android:id="@+id/imageviewLogin"
         android:layout_marginBottom="30dp"
         ></ImageView>
 
@@ -29,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
+            android:id="@+id/imgUsr"
             android:background="@drawable/user2"
             ></ImageView>
 
@@ -57,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
+            android:id="@+id/imgPass"
             android:background="@drawable/password3"
             ></ImageView>
 
@@ -108,7 +112,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Are you new to Nefizzo? Let's enter the world of Nefizzo..."
+            android:id="@+id/createText"
+            android:text="Are you new in Nefizzo? Let's enter the world of Nefizzo..."
             android:textStyle="italic|bold"
             android:textSize="15dp"
             android:textColor="#2c3e50"
