--- a/app/src/main/res/layout/activity_add_forum.xml
+++ b/app/src/main/res/layout/activity_add_forum.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/addForumLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -53,6 +54,7 @@
         </ImageButton>
 
         <TextView
+            android:id="@+id/info1"
             android:paddingLeft="15dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
@@ -62,14 +64,6 @@
         </TextView>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/forumImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-
-    </ImageView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,6 +84,7 @@
         </Button>
 
         <TextView
+            android:id="@+id/info2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Share your thoughts with others">
