Recipe list updated and test added.

--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/activity_recipe_list"
     tools:context="com.example.nefizzo.RecipeListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
