--- a/app/src/main/res/layout/recipe_list_layout.xml
+++ b/app/src/main/res/layout/recipe_list_layout.xml
@@ -20,23 +20,22 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="24dp"
-            tools:text="Android Studio Cardview"
+            android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/image_view_upload"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Android Studio Cardview" />
 
 
         <ImageView
             android:id="@+id/image_view_upload"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,20 +47,57 @@
             android:id="@+id/inst_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buraya kullanici adi gelecek"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="5dp"
+            android:text="Username"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/serving_num"
+            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
+            app:layout_constraintVertical_bias="0.947"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/prep_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="59dp"
+            android:layout_marginBottom="12dp"
+            android:text="Preparation Time"
+            app:layout_constraintBottom_toTopOf="@+id/cook_time"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/image_view_upload"
-            app:layout_constraintTop_toBottomOf="@+id/recipe_name"
-            app:layout_constraintVertical_bias="0.319"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />
 
+        <TextView
+            android:id="@+id/cook_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="378dp"
+            android:layout_marginBottom="13dp"
+            android:text="Cooking Time"
+            app:layout_constraintBottom_toTopOf="@+id/serving_num"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/image_view_upload"
+            app:layout_constraintTop_toBottomOf="@+id/prep_time" />
 
+        <TextView
+            android:id="@+id/serving_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="13dp"
+            android:text="Serving Number"
+            app:layout_constraintStart_toEndOf="@+id/image_view_upload"
+            app:layout_constraintTop_toBottomOf="@+id/cook_time" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
