--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -27,4 +27,11 @@
         android:text="list food"
         ></Button>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchRecipeBtn"
+        android:text="search"
+        ></Button>
+
 </LinearLayout>
