--- a/app/src/main/res/drawable/loginlayout.xml
+++ b/app/src/main/res/drawable/loginlayout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <stroke  android:color="#2d3436" android:width="3dp"  ></stroke>
+        <stroke  android:color="#487eb0" android:width="3dp"  ></stroke>
 
-        <gradient  android:startColor="#70a1ff" android:endColor="#18dcff" ></gradient>
+        <gradient android:startColor="#f1f2f6" android:endColor="#f1f2f6" ></gradient>
 
         <corners  android:radius="10dp"></corners>
 
