--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -9,16 +9,26 @@
     tools:context=".LoginScreen">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/recipe"
         android:layout_marginTop="20dp"
-        android:id="@+id/imageviewLogin"
-        android:layout_marginBottom="30dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/logo"
+        android:layout_gravity="center"
         ></ImageView>
 
+
+    <TextView
+        android:text="Nefizzo"
+        android:textColor="#487eb0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:padding="10dp"
+        android:textAlignment="center"
+        ></TextView>
+
     <LinearLayout
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -27,13 +37,7 @@
         android:background="@drawable/loginlayout"
         android:orientation="horizontal">
         
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/imgUsr"
-            android:background="@drawable/user2"
-            ></ImageView>
+
 
         <EditText
             android:layout_width="0dp"
@@ -55,14 +59,7 @@
         android:padding="10dp"
         android:background="@drawable/loginlayout"
         android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:id="@+id/imgPass"
-            android:background="@drawable/password3"
-            ></ImageView>
+        
 
         <EditText
             android:layout_width="0dp"
