--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:id="@+id/sign"
-    android:background="#ffcccc"
+    android:background= "#f1f2f6"
     tools:context=".SignActivity">
 
     <ScrollView
@@ -18,15 +18,14 @@
             android:layout_height="match_parent">
 
             <EditText
+                android:id="@+id/usernameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginlayout"
-                android:padding="10dp"
-                android:textStyle="bold|italic"
-                android:hint="Username"
                 android:layout_marginBottom="10dp"
-                android:id="@+id/usernameEditText"
-                ></EditText>
+                android:background="@drawable/loginlayout"
+                android:hint="Username"
+                android:padding="10dp"
+                android:textStyle="bold|italic"></EditText>
 
             <EditText
                 android:layout_width="match_parent"
@@ -113,6 +112,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textStyle="bold|italic"
+                        android:buttonTint="#487eb0"
                         android:text="Male" />
 
                     <RadioButton
@@ -121,6 +121,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textStyle="bold|italic"
+                        android:buttonTint="#487eb0"
                         android:text="Female" />
 
                 </RadioGroup>
@@ -131,10 +132,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/loginlayout"
                 android:textAllCaps="false"
+                android:textColor="#ffffff"
                 android:padding="10dp"
                 android:id="@+id/signButton"
+                android:background= "@drawable/button"
                 android:text="Join the Nefizzo World"
                 ></Button>
 
