--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/coastalBreeze"
+    android:background= "#f1f2f6"
     tools:context=".Profile">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="@drawable/grad"
+        android:background="#487eb0"
         android:id="@+id/topLayout"
         android:layout_height="wrap_content">
 
@@ -24,7 +24,7 @@
                 android:layout_height="120dp"
                 android:layout_margin="9dp"
                 android:adjustViewBounds="true"
-
+                android:background="@drawable/femaleicon"
                 ></ImageView>
 
         </RelativeLayout>
@@ -177,11 +177,10 @@
                 android:text="Recipes"
                 android:id="@+id/recipes"
                 android:layout_gravity="center"
-                android:background="@drawable/grad"
+                android:background= "@drawable/button"
                 ></Button>
 
         </LinearLayout>
-
     </ScrollView>
 
 
