--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -34,7 +34,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:padding="10dp"
-        android:background="@drawable/loginlayout"
+        android:background="@drawable/frame"
         android:orientation="horizontal">
 
 
@@ -56,7 +56,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:padding="10dp"
-        android:background="@drawable/loginlayout"
+        android:background="@drawable/frame"
         android:orientation="horizontal">
         
 
