--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -16,7 +16,7 @@
         android:hint="Enter your mail address...."
         android:textSize="20dp"
         android:id="@+id/mailAddressEditText"
-        android:background="@drawable/loginlayout"
+        android:background="@drawable/frame"
         ></EditText>
 
     <Button
