--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:hint="Username"
                 android:padding="10dp"
                 android:textStyle="bold|italic"></EditText>
@@ -30,7 +30,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:hint="Name"
                 android:textStyle="bold|italic"
@@ -41,7 +41,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:hint="Surname"
                 android:layout_marginBottom="10dp"
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Mail address"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:textStyle="bold|italic"
                 android:layout_marginBottom="10dp"
@@ -63,7 +63,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:hint="Password"
                 android:password="true"
@@ -75,7 +75,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:hint="Password again"
                 android:password="true"
@@ -87,7 +87,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
-                android:background="@drawable/loginlayout"
+                android:background="@drawable/frame"
                 android:padding="10dp"
                 android:layout_height="wrap_content">
 
