--- a/app/src/main/res/layout/recipe_list_layout.xml
+++ b/app/src/main/res/layout/recipe_list_layout.xml
@@ -99,7 +99,18 @@
             app:layout_constraintStart_toEndOf="@+id/image_view_upload"
             app:layout_constraintTop_toBottomOf="@+id/cook_time" />
 
+        <ImageButton
+            android:id="@+id/delete_button"
+            android:layout_width="55dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="71dp"
+            android:layout_marginEnd="31dp"
+            android:background="@android:drawable/ic_menu_delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.cardview.widget.CardView >
