--- a/app/src/main/res/layout/activity_search_adapter.xml
+++ b/app/src/main/res/layout/activity_search_adapter.xml
@@ -1,16 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
-    tools:context=".SearchAdapter">
+    android:layout_margin="10dp"
+    app:cardBackgroundColor="#f1f2f6"
+    android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_marginTop="20dp"
+        android:padding="10dp">
+
 
         <TextView
             android:id="@+id/recipe_name"
@@ -98,6 +102,9 @@
             app:layout_constraintTop_toBottomOf="@+id/cook_time" />
 
 
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.cardview.widget.CardView >
