--- a/app/src/main/res/layout/recipe_list_layout.xml
+++ b/app/src/main/res/layout/recipe_list_layout.xml
@@ -6,12 +6,15 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
     android:layout_margin="10dp"
+    app:cardBackgroundColor="#f1f2f6"
     android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_marginTop="20dp"
+        android:padding="10dp">
+
 
         <TextView
             android:id="@+id/recipe_name"
