Recipe and Search List Frames edited

--- a/app/src/main/res/layout/recipe_list_layout.xml
+++ b/app/src/main/res/layout/recipe_list_layout.xml
@@ -6,13 +6,14 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
     android:layout_margin="10dp"
+    android:layout_marginTop="20dp"
     app:cardBackgroundColor="#f1f2f6"
     android:elevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:background="@drawable/frame"
         android:padding="10dp">
 
 
