--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/activity_recipe_list"
+    android:background="#f1f2f6"
     tools:context="com.example.nefizzo.RecipeListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
