--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -13,6 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/logo"
+        android:id="@+id/nefizzologo"
         android:layout_gravity="center"
         ></ImageView>
 
