--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/profilelayout"
     android:background= "#f1f2f6"
     tools:context=".Profile">
 
@@ -175,6 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Recipes"
+                android:textAllCaps="false"
                 android:id="@+id/recipes"
                 android:layout_gravity="center"
                 android:background= "@drawable/button"
