--- a/app/src/main/res/layout/activity_add_forum.xml
+++ b/app/src/main/res/layout/activity_add_forum.xml
@@ -33,7 +33,7 @@
         android:id="@+id/forumCaptionEdtTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your comment">
+        android:hint="Enter the caption of the forum">
 
     </EditText>
 
